--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
     "@fortawesome/free-brands-svg-icons": "^7.1.0",
     "@fortawesome/react-fontawesome": "^3.1.0",
     "@heroui/react": "^2.8.5",
+    "cloudinary": "^2.8.0",
     "dotenv": "^17.2.3",
     "framer-motion": "^12.23.24",
     "leaflet": "^1.9.4",
     "mongodb": "^7.0.0",
     "next": "16.0.2-canary.1",
+    "next-cloudinary": "^6.17.5",
     "nodemailer": "^6.10.1",
     "postgres": "^3.4.7",
     "react": "^18.3.1",
