--- a/package.json
+++ b/package.json
@@ -27,8 +27,7 @@
     "nodemailer": "^6.10.1",
     "postgres": "^3.4.7",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "sharp": "^0.34.5"
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
@@ -38,6 +37,7 @@
     "baseline-browser-mapping": "^2.9.4",
     "eslint": "^9",
     "eslint-config-next": "16.0.0",
+    "sharp": "^0.34.5",
     "tailwindcss": "^4",
     "typescript": "^5"
   }
