--- a/.vercelignore
+++ b/.vercelignore
@@ -5,3 +5,11 @@ docs/
 .env.local
 .env
 pnpm-lock.yaml
+public/imagenes/menu-static/
+public/imagenes/*.jpeg
+public/imagenes/*.jpg
+public/uploads/
+public/slider/
+*.pyc
+__pycache__/
+remove_bg.py
