--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@heroui/react": "^2.8.5",
     "@octokit/rest": "^22.0.1",
     "@vercel/analytics": "^1.6.1",
+    "@vercel/blob": "^2.0.0",
     "@vercel/speed-insights": "^1.3.1",
     "cloudinary": "^2.8.0",
     "dotenv": "^17.2.3",
